# video-codec

./: CMakeLists.txt  README.md  test.sh
src/: codec_utils.c  codec_utils.h  decoder.c  encoder.c  image_V1.cu
src/gpu/: codec  image_V1.cu  image_V2.cu  image_V3.cu  image_V4.cu
